--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "typeface-roboto": "^1.1.13",
     "vue": "^2.6.12",
     "vue-axios": "^2.1.5",
     "vue-class-component": "^7.2.6",
